--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,7 +14,7 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1ucfc2ix2o07u.cloudfront.net/Z4wxKD4Jc"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1fejrztdgsube.cloudfront.net/I5oxKD4Jx"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
 <h2>在联邦政府内成立“政府效率部”</h2>
 <p>川普总统的首批行政令之一，就是正式设立“政府效率部”（DOGE）。不过，与之前的规划不同，DOGE不仅是咨询小组，更将是联邦政府内的一个实体。</p>
@@ -373,22 +373,23 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
+
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378927.md#1">白宫：拜登总统将出席川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411621.md#1">澳外长受邀参加美总统川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416562.md#1">韩国瑜率台湾代表团 赴美出席川普就职典礼</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/27/n2977832.md#1" target="_blank">鲜为人知的马克思之七：渎神的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413009.md#1">尾牙寻古：祭祀土地公从何时开始？传说中土地公如何成神？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416009.md#1">【未解之谜】皮行者牧场（一）：美国境内的时空门？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418141.md#1">【环球直击】川普就职后计划发布逾百行政命令</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418447.md#1">【时事金扫描】川普就职扫描 行政令波及华人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418138.md#1">【中国禁闻】新疫情爆发 网曝大量死亡案例</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418142.md#1">【全球新闻】川普再掌白宫 重塑信仰、繁荣、自由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418302.md#1">【新闻大破解】收买媒体大外宣 中共对美超限战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418423.md#1">【舞蹈】飞天艺术学院2024第二学期舞蹈考试（高班 女生）</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416577.md#1">大陆多地爆发新一波疫情 网曝大量死亡信息</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416856.md#1">中芯甩卖28纳米芯片 分析：或为驱动“内循环”</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400418.md#1">加州绿蟹令人头疼 生态难题被毛茸茸的它解决</a></li>
